@@ -321,16 +321,12 @@ textarea:focus, input:focus {
 	   background-color: #C0C0C0;
 	 }
 
-
-._popup td,th {
-    color: #000000;
-}
-
-.columnheader {
+td.columnheader {
     font-size: 12px;
     font-weight: bold;
-    color: #FFF;
+    color: #ffffff;
     padding-left: 5px;
+    padding: 2px;
     border: 1px solid #FFF;
     background-color: #6274CB;
 }
