@@ -16,6 +16,8 @@
 ../delete_photo.php
 ../delete_user.php
 ../do_command.php
+../ecard_form.php
+../ecard_preview.php
 ../edit_appearance.php
 ../edit_caption.php
 ../edit_field.php
